[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multicor_fa"
version = "1.0.2"
authors = [
  { name="Brielin C. Brown", email="bbrown@nygenome.org" },
  { name="Collin Wang", email="cwang@nygenome.org"},
]
description = "Multiset Correlation and Factor Analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 1.11",
    "numpy >= 1.20",
    "pandas >= 1.3.5",
    "scipy >= 1.7.1",
    "scikit-learn >= 1.0",
]
[project.urls]
"Homepage" = "https://github.com/collinwa/MCFA"
"Bug Tracker" = "https://github.com/collinwa/MCFA/issues"
